zupcasti_parovi.html page created. Links to this page, and from this page enabled. Pictures, drawings and links to YouTube tutorials and animations enabled and added on this page... I love my son Aleksej Ivkovic Cvijic very very much...

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link active" aria-current="page" href="#">Фрикциони парови</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="zupcasti_parovi.html" aria-disabled="true">Зупчасти парови</a>
+              <a class="nav-link" href="zupcasti_parovi.html">Зупчасти парови</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="lancani_parovi.html" aria-disabled="true">Ланчани парови</a>
@@ -49,7 +49,7 @@
         <h1>Моделирање фрикционих преносника снаге</h1>
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-11 col-lg-10">
-            <ul class="nav nav-tabs" id="st_me" role="tablist">
+            <ul class="nav nav-tabs" id="fr_pr_snage" role="tablist">
               <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="cilindricni_fr_parovi-tab" data-bs-toggle="tab" data-bs-target="#cilindricni_fr_parovi" type="button" role="tab" aria-controls="cilindricni_fr_parovi" aria-selected="true">Цилиндрични фрикциони пар</button>
               </li>
@@ -57,7 +57,7 @@
                 <button class="nav-link disabled" id="konusni_fr_parovi-tab" data-bs-toggle="tab" data-bs-target="#konusni_fr_parovi" type="button" role="tab" aria-controls="konusni_fr_parovi" aria-selected="true" aria-disabled="true">Конусни фрикциони пар</button>
               </li>
             </ul>
-            <div class="tab-content" id="st_me_TabContent">
+            <div class="tab-content" id="fr_pr_snage_TabContent">
               <div class="tab-pane fade show active" id="cilindricni_fr_parovi" role="tabpanel" aria-labelledby="cilindricni_fr_parovi-tab">
                 <div class="accordion" id="modeliranje_cilindricnog_fr_para">
                   <div class="accordion-item">
@@ -104,7 +104,7 @@
                     </h2>
                     <div id="collapse_crtez_cilindricnog_fr_para" class="accordion-collapse collapse" aria-labelledby="crtez_cilindricnog_fr_para" data-bs-parent="#modeliranje_cilindricnog_fr_para">
                       <div class="accordion-body">
-                        <img src="Pictures/Crtezi/Cilindricni_frikcioni_prenosnik_snage.jpg" width="100%" alt="Цртеж фрикционог пара">
+                        <img src="Pictures/Crtezi/Cilindricni_frikcioni_prenosnik_snage.jpg" width="100%" alt="Цртеж цилиндричног фрикционог пара">
                       </div>
                     </div>
                   </div>
