--- a/zupcasti_parovi.html
+++ b/zupcasti_parovi.html
@@ -265,6 +265,39 @@
                     </div>
                   </div>
                   <div class="accordion-item">
+                    <h2 class="accordion-header" id="Arhimedov_puz_izradak">
+                      <button class="btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_Arhimedov_puz_izradak" aria-expanded="true" aria-controls="collapse_Arhimedov_puz_izradak">
+                        Архимедов пуж - израдак:
+                      </button>
+                    </h2>
+                    <div id="collapse_Arhimedov_puz_izradak" class="accordion-collapse collapse" aria-labelledby="Arhimedov_puz_izradak" data-bs-parent="#modeliranje_puznog_para">
+                      <div class="accordion-body">
+                        <div id="carousel_3D_Arhimedov_puz" class="carousel carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carousel_3D_Arhimedov_puz" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carousel_3D_Arhimedov_puz" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          </div>
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img src="Pictures/Carousel/puz_1.jpg" class="d-block w-100" alt="Архимедов пуж">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="Pictures/Carousel/puz_2.jpg" class="d-block w-100" alt="Архимедов пуж">
+                            </div>
+                          </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#carousel_3D_Arhimedov_puz" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#carousel_3D_Arhimedov_puz" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
                     <h2 class="accordion-header" id="T4_7x2">
                       <button class="btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_T4_7x2" aria-expanded="true" aria-controls="collapse_T4_7x2">
                         Табела 4.7:
