--- a/zupcasti_parovi.html
+++ b/zupcasti_parovi.html
@@ -36,11 +36,13 @@
               <a class="nav-link" href="lancani_parovi.html" aria-disabled="true">Ланчани парови</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                 Ремени парови
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Пљоснати ремен</a></li>
+                <li>
+                  <a class="dropdown-item" href="kaisni_par.html">Пљоснати ремен</a>
+                </li>
                 <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Клинасти ремен</a></li>
               </ul>
             </li>
