In nav bar an all pages links to related Web sites added and enabled. I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <title>Почетна страна!</title>
+    <title>Фрикциони парови!</title>
   </head>
   <body>
     <!-- navbar -->
@@ -43,7 +43,31 @@
                 <li>
                   <a class="dropdown-item" href="kaisni_par.html">Пљоснати ремен</a>
                 </li>
-                <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Клинасти ремен</a></li>
+                <li>
+                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Клинасти ремен</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                Повезани Web site-ови
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/mpr1/">Моделирање помоћу рачунара 1</a>
+                </li>
+                <li>
+                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Моделирање помоћу рачунара 3</a>
+                </li>
+                <li>
+                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Моделирање и симулација пом. рач.</a>
+                </li>
+                </li>
+                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Моделирање и симулација пом. рач. - изб. пр.</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/konstruisanje/">Конструисање</a>
+                </li>
               </ul>
             </li>
           </ul>
