A small mistake corrected on kaisni_par.html page about number pi(), and in PDF document Pljosnati_remen.pdf also mistake has been corrected... I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/kaisni_par.html
+++ b/kaisni_par.html
@@ -1111,7 +1111,7 @@
                           брзина: 
                         </p>
                         <p class="left_padding">
-                          <img src="Pictures/png/ug_brzina=.png" alt="&omega;="> 151.767 <img src="Pictures/png/rad_s.png" alt="rad/s">
+                          <img src="Pictures/png/ug_brzina=.png" alt="&omega;="> 151.844 <img src="Pictures/png/rad_s.png" alt="rad/s">
                         </p>
                         <p>
                           <strong>
@@ -1120,7 +1120,7 @@
                           момент: 
                         </p>
                         <p class="left_padding">
-                          <img src="Pictures/png/T=.png" alt="T="> 121897.650 <img src="Pictures/png/Nmm.png" alt="Nmm">
+                          <img src="Pictures/png/T=.png" alt="T="> 121835.853 <img src="Pictures/png/Nmm.png" alt="Nmm">
                         </p>
                         <div class="accordion" id="accordion_T2_3">
                           <div class="accordion-item">
@@ -1189,7 +1189,7 @@
                           пречник вратила:
                         </p>
                         <p class="left_padding">
-                          <img src="Pictures/png/di=.png" alt="di="> 21.039 <img src="Pictures/png/mm.png" alt="mm">
+                          <img src="Pictures/png/di=.png" alt="di="> 21.035 <img src="Pictures/png/mm.png" alt="mm">
                         </p>
                         <p>
                           <strong>
@@ -1201,7 +1201,7 @@
                           <strong>
                             израчунатом 
                           </strong>
-                          пречнику вратила: 21.039 <img src="Pictures/png/mm.png" alt="mm"> одговара дубина жлеба за клин:
+                          пречнику вратила: 21.035 <img src="Pictures/png/mm.png" alt="mm"> одговара дубина жлеба за клин:
                         </p>
                         <p>
                           <img src="Pictures/png/t_klin=.png" alt="t="> 3.5 <img src="Pictures/png/mm.png" alt="mm">, те добијамо потребан пречник вратила:
@@ -1224,7 +1224,7 @@
                           </div>
                         </div>
                         <p>
-                          <img src="Pictures/png/d_vratila=.png" alt="d="> 24.539 <img src="Pictures/png/mm.png" alt="mm">
+                          <img src="Pictures/png/d_vratila=.png" alt="d="> 24.535 <img src="Pictures/png/mm.png" alt="mm">
                         </p>
                         <p>
                           <strong>
@@ -1275,7 +1275,7 @@
                           </strong>
                         </p>
                         <p>
-                          <img src="Pictures/png/d_t=.png" alt="d-t="> 53.2 <img src="Pictures/png/mm.png" alt="mm"> > <img src="Pictures/png/di_solo=.png" alt="di="> 21.039 <img src="Pictures/png/mm.png" alt="mm">
+                          <img src="Pictures/png/d_t=.png" alt="d-t="> 53.2 <img src="Pictures/png/mm.png" alt="mm"> > <img src="Pictures/png/di_solo=.png" alt="di="> 21.035 <img src="Pictures/png/mm.png" alt="mm">
                         </p>
                         <h3>Гоњено вратило</h3>
                         <p>
@@ -1315,7 +1315,7 @@
                           момент на погонском вратилу: 
                         </p>
                         <p class="left_padding">
-                          <img src="Pictures/png/T1=.png" alt="T="> 121897.650 <img src="Pictures/png/Nmm.png" alt="Nmm">
+                          <img src="Pictures/png/T1=.png" alt="T="> 121835.853 <img src="Pictures/png/Nmm.png" alt="Nmm">
                         </p>
                         <p>
                           <strong>
@@ -1324,7 +1324,7 @@
                           момент на гоњеном вратилу износи: 
                         </p>
                         <p class="left_padding">
-                          <img src="Pictures/png/T2=.png" alt="T2="> 241320.221 <img src="Pictures/png/Nmm.png" alt="Nmm">
+                          <img src="Pictures/png/T2=.png" alt="T2="> 241197.882 <img src="Pictures/png/Nmm.png" alt="Nmm">
                         </p>
                         <p>
                           <strong>
@@ -1342,7 +1342,7 @@
                           пречник вратила:
                         </p>
                         <p class="left_padding">
-                          <img src="Pictures/png/di_II=.png" alt="di="> 26.422 <img src="Pictures/png/mm.png" alt="mm">
+                          <img src="Pictures/png/di_II=.png" alt="di="> 26.413 <img src="Pictures/png/mm.png" alt="mm">
                         </p>
                         <p>
                           <strong>
@@ -1410,7 +1410,7 @@
                           </strong>
                         </p>
                         <p>
-                          <img src="Pictures/png/d_t=.png" alt="d-t="> 63.6 <img src="Pictures/png/mm.png" alt="mm"> > <img src="Pictures/png/di_solo=.png" alt="di="> 26.422 <img src="Pictures/png/mm.png" alt="mm">
+                          <img src="Pictures/png/d_t=.png" alt="d-t="> 63.6 <img src="Pictures/png/mm.png" alt="mm"> > <img src="Pictures/png/di_solo=.png" alt="di="> 26.413 <img src="Pictures/png/mm.png" alt="mm">
                         </p>
                       </div>
                     </div>
@@ -2163,7 +2163,7 @@
                             <button class="nav-link" id="zip_sklopa-tab" data-bs-toggle="tab" data-bs-target="#zip_sklopa" type="button" role="tab" aria-controls="zip_sklopa" aria-selected="false">"Zip" склопа</button>
                           </li>
                         </ul>
-                        <div class="tab-content" id="kaisni_par_TabContent">
+                        <div class="tab-content" id="kaisni_par_TabContentx1">
                           <div class="tab-pane show active" id="kaisni_par_princip_rada_i_animacija" role="tabpanel" aria-labelledby="kaisni_par_princip_rada_i_animacija-tab">
                             <div class="card ratio ratio-16x9">
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/gqqpkr3cIps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
