remeni_par.html page cretaed. All links to this page and from this page added and enabled. On the page pictures, drawings and links to YouTube tutorials added... I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <a class="dropdown-item" href="kaisni_par.html">Пљоснати ремен</a>
                 </li>
                 <li>
-                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Клинасти ремен</a>
+                  <a class="dropdown-item" href="remeni_par.html">Клинасти ремен</a>
                 </li>
               </ul>
             </li>
