--- a/kaisni_par.html
+++ b/kaisni_par.html
@@ -44,7 +44,7 @@
                   <a class="dropdown-item active" href="kaisni_par.html">Пљоснати ремен</a>
                 </li>
                 <li>
-                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Клинасти ремен</a>
+                  <a class="dropdown-item" href="remeni_par.html">Клинасти ремен</a>
                 </li>
               </ul>
             </li>
@@ -2057,7 +2057,7 @@
                     </h2>
                     <div id="collapse_mod_sklopa" class="accordion-collapse collapse" aria-labelledby="mod_sklopa" data-bs-parent="#modeliranje_i_crtezi_kaisnog_para">
                       <div class="accordion-body">
-                        <ul class="nav nav-tabs" id="clanci_lanca_Tab" role="tablist">
+                        <ul class="nav nav-tabs" id="kaisni_par_sklop_Tab" role="tablist">
                           <li class="nav-item" role="presentation">
                             <button class="nav-link active" id="modeliranje_sklopa-tab" data-bs-toggle="tab" data-bs-target="#modeliranje_sklopa" type="button" role="tab" aria-controls="modeliranje_sklopa" aria-selected="true">Моделирање склопа</button>
                           </li>
@@ -2065,7 +2065,7 @@
                             <button class="nav-link" id="sklop_kaisnog_para-tab" data-bs-toggle="tab" data-bs-target="#sklop_kaisnog_para" type="button" role="tab" aria-controls="sklop_kaisnog_para" aria-selected="false">Каишни пар - подсетник</button>
                           </li>
                         </ul>
-                        <div class="tab-content" id="clanci_lanca_TabContent">
+                        <div class="tab-content" id="kaisni_par_sklop_TabContent">
                           <div class="tab-pane show active" id="modeliranje_sklopa" role="tabpanel" aria-labelledby="modeliranje_sklopa-tab">
                             <div class="card ratio ratio-16x9">
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/Y9jrvBB4Thw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
