--- a/lancani_parovi.html
+++ b/lancani_parovi.html
@@ -44,7 +44,7 @@
                   <a class="dropdown-item" href="kaisni_par.html">Пљоснати ремен</a>
                 </li>
                 <li>
-                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Клинасти ремен</a>
+                  <a class="dropdown-item" href="remeni_par.html">Клинасти ремен</a>
                 </li>
               </ul>
             </li>
