--- a/kaisni_par.html
+++ b/kaisni_par.html
@@ -57,7 +57,7 @@
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/mpr1/">Моделирање помоћу рачунара 1</a>
                 </li>
                 <li>
-                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Моделирање помоћу рачунара 3</a>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/mpr3/">Моделирање помоћу рачунара 3</a>
                 </li>
                 <li>
                   <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Моделирање и симулација пом. рач.</a>
