--- a/lancani_parovi.html
+++ b/lancani_parovi.html
@@ -60,7 +60,10 @@
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/mpr3/">Моделирање помоћу рачунара 3</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r/">Моделирање и симулација пом. рач.</a>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r_2022/">Моделирање и сим. пом. рач. шк. 2022/23. год.</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r/">Моделирање и симулација пом. рач. шк. 2021/22. год.</a>
                 </li>
                 </li>
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_izborni/">Моделирање и симулација пом. рач. - изб. пр.</a>
@@ -78,7 +81,7 @@
     <div class="container">
       <!-- Content here -->
       <div>
-        <h1>Прорачун моделирање и цртежи ланчаног пара</h1>
+        <h1>Прорачун моделирање и цртежи ланчаног пара шк. 2021/22. год.</h1>
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-11 col-lg-10">
             <ul class="nav nav-tabs" id="lancani_par" role="tablist">
